test/libyul/yulSyntaxTests/invalid/literals_on_stack_disallowed.yul
{
    1
}
// ----
// ParserError 6913: (8-9): Call or assignment expected.
